# DictionaryOverlay

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json  conanfile.txt  main.cpp
include/dictionary/: dictionary_service.h
include/ocr/: ocr_engine.h
include/screenshot/: screenshot_manager.h
include/settings/: settings_manager.h
include/ui/: main_window.h  overlay_window.h
include/utils/: utils.h
resources/: resources.qrc
src/: CMakeLists.txt
src/dictionary/: dictionary_service.cpp
src/screenshot/: screenshot_manager.cpp
src/ui/: main_window.cpp  main_window.ui  overlay_window.cpp  overlay_window.ui  settings_dialog.ui
src/utils/: utils.cpp
tests/: CMakeLists.txt
